docker added in discount service and properties updated

--- a/discount-service/src/main/resources/application.properties
+++ b/discount-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=discount-service
+spring.datasource.url=jdbc:postgresql://localhost:54323/discounts
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=postgres
+spring.datasource.password=153515
