product service finished

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=postgres
 spring.datasource.password=153515
 discount.grpc.host=localhost
-discount.grpc.port=localhost
+discount.grpc.port=9090
