--- a/discount-service/src/main/resources/application.properties
+++ b/discount-service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=postgres
 spring.datasource.password=153515
+
+server.port=8082
