--- a/discount-service/build.gradle
+++ b/discount-service/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.0'
     id 'io.spring.dependency-management' version '1.1.6'
+    id "com.google.protobuf" version "0.9.4"
 }
 
 group = 'com.ofg'
@@ -32,6 +33,31 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
+    implementation 'net.devh:grpc-spring-boot-starter:2.15.0.RELEASE' exclude group: 'io.grpc', module: 'grpc-netty-shaded'
+    implementation 'io.grpc:grpc-stub:1.58.0'
+    implementation 'io.grpc:grpc-protobuf:1.58.0'
+    implementation 'io.grpc:grpc-netty:1.58.0'
+}
+
+protobuf {
+    protoc { artifact = "com.google.protobuf:protoc:3.24.3" }
+    plugins {
+        grpc { artifact = "io.grpc:protoc-gen-grpc-java:1.58.0" }
+    }
+    generateProtoTasks {
+        all()*.plugins { grpc {} }
+    }
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs 'build/generated/source/proto/main/grpc'
+            srcDirs 'build/generated/source/proto/main/java'
+        }
+    }
 }
 
 tasks.named('test') {
